# Truth-Bench

./: .replit  backtest.py  package-lock.json  package.json  pnpm-lock.yaml  replit.md  vercel.json
attached_assets/: Pasted-Build-a-React-web-app-called-AlphaBench-that-benchmarks_1765052306821.txt  Pasted-Create-a-new-tab-called-Analyze-that-replicates-the-Kal_1765090056469.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: mode-toggle.tsx  nav.tsx
client/src/components/dashboard/: Leaderboard.tsx  ModelStream.tsx  PerformanceChart.tsx  (+2 more)
client/src/hooks/: useLLM.ts  useTruthbench.ts
client/src/lib/: llmApi.ts  simulation.ts  truthbenchApi.ts
client/src/pages/: analyze.tsx  chat.tsx  dashboard.tsx  report.tsx  results.tsx  traces.tsx  truthbench.tsx
llm-service/: .env.example  .gitignore  pyproject.toml  requirements.txt  resolved_markets.json
llm-service/src/kalshi/: __init__.py  client.py  extract_resolved.py  models.py  twitter_augmentation.py
llm-service/src/llm_service/: __init__.py  config.py  main.py
llm-service/src/llm_service/llm/: __init__.py  client.py  providers.py  schemas.py
llm-service/src/truthbench/: __init__.py  api.py  decision.py  models.py  portfolio.py  replay.py  scoring.py  simulation.py  tracing.py
llm-service/traces/: truthbench_a54efcb0_20251207_111407.json  truthbench_bf294e40_20251207_103551.json
migrations/: 0001_seed_market_events.sql
server/: db.ts  index.ts  riskEngine.ts  routes.ts  seedTrades.ts  simulation.ts  staticTrades.ts  storage.ts  tradingSimulation.ts
shared/: schema.ts
(+1 files in other folders)
