[project]
name = "llm-service"
version = "0.1.0"
description = "Multi-provider LLM service using LiteLLM with FastAPI"
readme = "README.md"
authors = [
    { name = "renesultan", email = "rene.sultan4@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "litellm>=1.55.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.32.0",
]

[project.scripts]
llm-service = "llm_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_service"]
